// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Payment / VoucherForm Initial Code 1`] = `
<div
  className="rs"
>
  <form
    className="voucher-form "
    onSubmit={[Function]}
  >
    <div
      className="voucher-form__line"
    >
      <div
        className="form-field-container "
      >
        <label
          className="label form-field-container__label"
          htmlFor="form-field-67"
        >
          Code promo
        </label>
        <div
          className="form-field-container__field"
        >
          <input
            aria-invalid={false}
            autoComplete="off"
            className="form-input-field "
            disabled={false}
            formNoValidate={true}
            id="form-field-67"
            maxLength={16}
            name="code"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck={false}
            type="text"
            value="EURO2016"
          />
        </div>
      </div>
    </div>
    <div
      className="voucher-form__line"
    >
      <button
        aria-pressed={false}
        className="button button--size-small progress-button voucher-form__button"
        disabled={false}
        type="submit"
      >
        <div
          className="progress-button__content"
        >
          Ajouter le code promo
        </div>
        <div
          className="progress-button__progress-bar"
        />
      </button>
      <button
        aria-pressed={false}
        className="button button--size-small voucher-form__button"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        Annuler
      </button>
    </div>
  </form>
</div>
`;

exports[`Storyshots Payment / VoucherForm Main 1`] = `
<div
  className="rs"
>
  <form
    className="voucher-form "
    onSubmit={[Function]}
  >
    <div
      className="voucher-form__line"
    >
      <div
        className="form-field-container "
      >
        <label
          className="label form-field-container__label"
          htmlFor="form-field-66"
        >
          Code promo
        </label>
        <div
          className="form-field-container__field"
        >
          <input
            aria-invalid={false}
            autoComplete="off"
            className="form-input-field "
            disabled={false}
            formNoValidate={true}
            id="form-field-66"
            maxLength={16}
            name="code"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="voucher-form__line"
    >
      <button
        aria-pressed={false}
        className="button button--size-small progress-button voucher-form__button"
        disabled={false}
        type="submit"
      >
        <div
          className="progress-button__content"
        >
          Ajouter le code promo
        </div>
        <div
          className="progress-button__progress-bar"
        />
      </button>
      <button
        aria-pressed={false}
        className="button button--size-small voucher-form__button"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        Annuler
      </button>
    </div>
  </form>
</div>
`;

exports[`Storyshots Payment / VoucherForm Submit Error 1`] = `
<div
  className="rs"
>
  <form
    className="voucher-form "
    onSubmit={[Function]}
  >
    <div
      className="voucher-form__line"
    >
      <div
        className="form-field-container "
      >
        <label
          className="label form-field-container__label"
          htmlFor="form-field-69"
        >
          Code promo
        </label>
        <div
          className="form-field-container__field"
        >
          <input
            aria-invalid={false}
            autoComplete="off"
            className="form-input-field "
            disabled={false}
            formNoValidate={true}
            id="form-field-69"
            maxLength={16}
            name="code"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck={false}
            type="text"
            value="CODE21"
          />
        </div>
      </div>
    </div>
    <div
      className="voucher-form__line"
    >
      <button
        aria-pressed={false}
        className="button button--size-small progress-button voucher-form__button"
        disabled={false}
        type="submit"
      >
        <div
          className="progress-button__content"
        >
          Ajouter le code promo
        </div>
        <div
          className="progress-button__progress-bar"
        />
      </button>
      <button
        aria-pressed={false}
        className="button button--size-small voucher-form__button"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        Annuler
      </button>
    </div>
  </form>
</div>
`;

exports[`Storyshots Payment / VoucherForm Submit Success 1`] = `
<div
  className="rs"
>
  <form
    className="voucher-form "
    onSubmit={[Function]}
  >
    <div
      className="voucher-form__line"
    >
      <div
        className="form-field-container "
      >
        <label
          className="label form-field-container__label"
          htmlFor="form-field-68"
        >
          Code promo
        </label>
        <div
          className="form-field-container__field"
        >
          <input
            aria-invalid={false}
            autoComplete="off"
            className="form-input-field "
            disabled={false}
            formNoValidate={true}
            id="form-field-68"
            maxLength={16}
            name="code"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck={false}
            type="text"
            value="CODE21"
          />
        </div>
      </div>
    </div>
    <div
      className="voucher-form__line"
    >
      <button
        aria-pressed={false}
        className="button button--size-small progress-button voucher-form__button"
        disabled={false}
        type="submit"
      >
        <div
          className="progress-button__content"
        >
          Ajouter le code promo
        </div>
        <div
          className="progress-button__progress-bar"
        />
      </button>
      <button
        aria-pressed={false}
        className="button button--size-small voucher-form__button"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        Annuler
      </button>
    </div>
  </form>
</div>
`;
